yaml-examples/smokeping/smokeping-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smokeping
  labels:
    app: smokeping
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: smokeping
  template:
    metadata:
      labels:
        app: smokeping
    spec:
      containers:
      - name: smokeping
        image: linuxserver/smokeping
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: "/config"
            name: config
          - mountPath: "/data"
            name: data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: smokeping-config
        - name: data
          persistentVolumeClaim:
            claimName: smokeping-data
